# workflow-dispatch

./: .bazelrc  .gitignore  .prettierrc.yml  .yarnrc.yml  BUILD.bazel  LICENSE.txt  README.md  WORKSPACE.bazel  action.yml  package.json
rules/javascript/: rules.bzl
tools/bazel/: BUILD.bazel  deleted.bazelrc
tools/buildifier/: BUILD.bazel
tools/file/: files.bazel  workspace.bzl
tools/javascript/: BUILD.bazel  npm.bzl  workspace.bzl
tools/lint/: BUILD.bazel
tools/prettier/: BUILD.bazel
tools/typescript/: BUILD.bazel  tsconfig.common.json
workflow-dispatch/: BUILD.bazel  rollup.config.js  tsconfig.json
workflow-dispatch/src/: action.ts  dispatch.ts  index.ts  main.ts
