workspace(name = "workflow_dispatch")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Skylib

SKYLIB_VERSION = "1.8.2"

http_archive(
    name = "bazel_skylib",
    sha256 = "6e78f0e57de26801f6f564fa7c4a48dc8b36873e416257a92bbb0937eeac8446",
    url = "https://github.com/bazelbuild/bazel-skylib/releases/download/%s/bazel-skylib-%s.tar.gz" % (SKYLIB_VERSION, SKYLIB_VERSION),
)

# Rules Python

RULES_PYTHON_VERSION = "1.4.1"

http_archive(
    name = "rules_python",
    sha256 = "9f9f3b300a9264e4c77999312ce663be5dee9a56e361a1f6fe7ec60e1beef9a3",
    strip_prefix = "rules_python-%s" % RULES_PYTHON_VERSION,
    url = "https://github.com/bazel-contrib/rules_python/releases/download/%s/rules_python-%s.tar.gz" % (RULES_PYTHON_VERSION, RULES_PYTHON_VERSION),
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python3_10",
    python_version = "3.10",
)

# Javascript

JAVASCRIPT_VERSION = "3242db45810f9b4913cf8fc05ec57c53e057771a"

http_archive(
    name = "better_rules_javascript",
    sha256 = "6212e48add1ae7d2788c0af54b7f718c72862d3464ff9c650a8ecaff311720f3",
    strip_prefix = "rules_javascript-%s" % JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % JAVASCRIPT_VERSION,
)

load("@better_rules_javascript//rules:workspace.bzl", javascript_repositories = "repositories")

javascript_repositories()

# Files

FILE_VERSION = "76757f467af1d03ae03773d7d9f97918fe54a51a"

http_archive(
    name = "rules_file",
    sha256 = "df2cb62b2c19ef6f133cfcc4e713b26b61075ea323ba07681e9708db5562abe6",
    strip_prefix = "rules_file-%s" % FILE_VERSION,
    url = "https://github.com/redoapp/rules_file/archive/%s.zip" % FILE_VERSION,
)

load("@rules_file//rules:init.bzl", "file_init")

file_init()

load("@rules_file//buildifier:workspace.bzl", "buildifier_repositories", "buildifier_toolchains")

buildifier_repositories()

buildifier_toolchains()

load("@rules_file//rules:workspace.bzl", "file_repositories")

file_repositories()

# @

load("//tools/javascript:workspace.bzl", "npm_repositories")

npm_repositories()

load("//tools/file:workspace.bzl", workflow_dispatch_file_repositories = "file_repositories")

workflow_dispatch_file_repositories()
